test/negative/215_empty_collection_scalar.err
215_empty_collection_scalar.fx:7:6: error: explicit type specification of the defined value does not match the assigned expression type
215_empty_collection_scalar.fx:8:9: error: the appropriate match for 'n' of type '<unknown>' is not found.

2 errors occured during type checking.
